--- a/css/style.css
+++ b/css/style.css
@@ -546,7 +546,18 @@ hr {
 .img8 {
   background-image: url(/img/react.png); }
 
-.img9 {
-  background-image: url(/img/Chisto4\ Dev\ Resume.png); }
+.portfolioLink {
+  margin-top: 1rem; }
+  .portfolioLink a {
+    text-decoration: none;
+    font-size: 1rem;
+    font-weight: 700;
+    color: black; }
+    @media (min-height: 768px) and (max-height: 844px) {
+      .portfolioLink a {
+        font-size: 0.8rem; } }
+    @media (max-width: 739px), (max-height: 739px) {
+      .portfolioLink a {
+        font-size: 1.5rem; } }
 
 /*# sourceMappingURL=style.css.map */
