--- a/css/style.css
+++ b/css/style.css
@@ -552,7 +552,7 @@ hr {
     text-decoration: none;
     font-size: 1rem;
     font-weight: 700;
-    color: black; }
+    color: rgba(37, 32, 95, 0.801); }
     @media (min-height: 768px) and (max-height: 844px) {
       .portfolioLink a {
         font-size: 0.8rem; } }
