--- a/sass/style.scss
+++ b/sass/style.scss
@@ -675,7 +675,7 @@ hr {
     text-decoration: none;
     font-size: 1rem;
     font-weight: 700;
-    color: black;
+    color: rgba(37, 32, 95, 0.801);
 
     @media (min-height: 768px) and (max-height: 844px) {
     font-size: 0.8rem;
