--- a/css/style.css
+++ b/css/style.css
@@ -553,6 +553,12 @@ hr {
     font-size: 1rem;
     font-weight: 700;
     color: rgba(37, 32, 95, 0.801); }
+    .portfolioLink a:hover {
+      font-size: 1.1rem;
+      color: rgba(152, 30, 189, 0.781);
+      transition: 0.4s; }
+    .portfolioLink a:after {
+      transition: 0.8s; }
     @media (min-height: 768px) and (max-height: 844px) {
       .portfolioLink a {
         font-size: 0.8rem; } }
