--- a/css/style.css
+++ b/css/style.css
@@ -57,7 +57,9 @@ body, section, .userInformathion, .aboutMeBlock, .stacInformathion, .block, .sta
   justify-content: center;
   width: 100%;
   height: 100%;
-  box-sizing: border-box; }
+  box-sizing: border-box;
+  scroll-behavior: smooth;
+}
 
 body {
   height: 100vh;
