--- a/sass/style.css
+++ b/sass/style.css
@@ -95,7 +95,7 @@ body {
   scroll-behavior: smooth;
 }
 
-@media (max-width: 739px), (max-height: 739px) {
+@media (max-width: 739px) {
   body {
     font-size: 14px;
     display: -webkit-box;
@@ -106,6 +106,7 @@ body {
     -webkit-box-pack: center;
         -ms-flex-pack: center;
             justify-content: center;
+    background: none;
   }
 }
 
@@ -343,7 +344,7 @@ h4 {
     -webkit-box-align: start;
         -ms-flex-align: start;
             align-items: flex-start;
-    margin-left: 1rem;
+    padding-left: 1rem;
   }
   .mobileContact h4 {
     margin-top: 1rem;
@@ -363,11 +364,13 @@ h4 {
 
 .contact a {
   text-decoration: none;
-  color: black;
+  color: #513cac;
+  text-shadow: 1px 1px 2px rgba(128, 128, 128, 0.356);
 }
 
 .contact a:hover {
-  font-size: 1rem;
+  -webkit-transform: scale(103%);
+          transform: scale(103%);
   color: rgba(84, 119, 196, 0.877);
   -webkit-transition: 0.4s;
   transition: 0.4s;
