--- a/sass/style.scss
+++ b/sass/style.scss
@@ -37,11 +37,12 @@ body {
 
     background: linear-gradient(to left bottom,rgba(203, 227, 247, 0.384) 30%, rgba(235, 229, 181, 0.171) 80%);
 
-    @media (max-width: 739px), (max-height: 739px) {
+    @media (max-width: 739px) {
         font-size: 14px;
         display: flex;
         align-content: center;
         justify-content: center;
+        background: none;
     }
 
     scroll-behavior: smooth;
@@ -84,9 +85,8 @@ section {
 
     @media (max-width: 739px), (max-height: 739px) {
         width: 100%;
-    height: 100%;
-
-    box-shadow: none;
+        height: 100%;
+        box-shadow: none;
     }
 }
 
@@ -206,7 +206,7 @@ h4 {
         display: flex;
         flex-direction: column;
         align-items: flex-start;
-        margin-left: 1rem;
+        padding-left: 1rem;
 
         h4 {
             margin-top: 1rem;
@@ -228,10 +228,10 @@ h4 {
 
         a {
             text-decoration: none;
-            color: black;
-
+            color: rgb(81, 60, 172);
+            text-shadow: 1px 1px 2px rgba(128, 128, 128, 0.356);
             &:hover {
-                font-size: 1rem;
+                transform: scale(103%);
                 color: rgba(84, 119, 196, 0.877);
                 transition: 0.4s;
             }
