--- a/sass/style.scss
+++ b/sass/style.scss
@@ -326,7 +326,10 @@ hr {
 
         h4 {
             padding-bottom: 0;
-            padding-top: 2%;
+    @media (min-height: 845px) and (max-height: 899px) {
+        padding-top: 2%;
+        padding-bottom: 2%;
+    }
         }
 
     @media (min-height: 845px) and (max-height: 899px) {
@@ -357,7 +360,7 @@ hr {
         @extend %flexCenter;
         font-size: 0.8rem;
         font-weight: 700;
-        height: 3rem;
+        height: 2.45rem;
     }
 
     @media (min-height: 900px) and (max-height: 955px) {
@@ -385,7 +388,6 @@ hr {
     }
     }
 
-
 .middleLine {
     display: flex;
     flex-direction: column;
@@ -397,7 +399,7 @@ hr {
     display: flex;
     flex-direction: column;
     align-items: center;
-    height: 3rem;
+    height: 2.45rem;
     justify-content: flex-end;
 
     &:last-child {
@@ -413,7 +415,7 @@ hr {
     background-color:#222;
     border:1px;
     display: flex;
-    height: 1.2rem;
+    height: 1rem;
     width: 2px;
     border-color: black;
 
@@ -425,8 +427,8 @@ hr {
 .circle {
     background-color:rgba(255, 255, 255, 0);
     border:2px solid #222;    
-    height:0.4rem;
-    width:0.4rem;
+    height:0.2rem;
+    width:0.2rem;
     border-radius:50%;
 }
 
@@ -440,7 +442,7 @@ hr {
         display: flex;
         font-size: 0.7rem;
         text-align: justify;
-        height: 3rem;
+        height: 2.45rem;
         align-items: center;
 
         @media (min-height: 740px) and (max-height: 767px) {
@@ -456,7 +458,7 @@ hr {
 
     font-size: 0.7rem;
     text-align: justify;
-    height: 3rem;
+    height: 2.45rem;
 
     @media (min-height: 740px) and (max-height: 767px) {
         height: 2rem;
@@ -480,7 +482,7 @@ hr {
 }
 
 .marginTop {
-    margin-top: 1.5rem;
+    margin-top: 1rem;
     @media (min-height: 740px) and (max-height: 767px) {
         margin-top: 0.6rem;
     }
@@ -491,25 +493,23 @@ hr {
     flex-direction: column;
 
     p {
-        font-size: 0.8rem;
+        font-size: 0.6rem;
         margin-top: 0.2rem;
     }
 
 @media (min-height: 768px) and (max-height: 844px) {
     p {
-        font-size: 0.7rem;
+        font-size: 0.5rem;
         margin-top: 0.2rem;
     }
 }
 @media (min-height: 740px) and (max-height: 767px) {
     p {
-        font-size: 0.6rem;
+        font-size: 0.4rem;
         margin-top: 0.15rem;
     }
 }
 }
-
-
 
 .skillsCircleWrapper {
     @extend %flexCenter;
@@ -517,40 +517,14 @@ hr {
 
     background-color:rgba(255, 255, 255, 0);
     border:2px solid #222;    
-    height:80px;
-    width:80px;
+    height:50px;
+    width:50px;
     border-radius:50%;
-
-    @media (min-height: 845px) and (max-height: 955px) {
-        height:70px;
-        width:70px;    
-    }
-    @media (min-height: 768px) and (max-height: 844px) {
-        height:60px;
-        width:60px;
-    }
-    @media (min-height: 740px) and (max-height: 767px) {
-        height:50px;
-        width:50px;
-    }
 }
 
 %vhCircleAfter {
-    width: 65px;
-    height: 65px;
-
-    @media (min-height: 845px) and (max-height: 955px) {
-            width: 55px;
-            height: 55px;
-        }
-    @media (min-height: 768px) and (max-height: 844px) {
-            width: 45px;
-            height: 45px;
-        }
-    @media (min-height: 740px) and (max-height: 767px) {
-            width: 36px;
-            height: 36px;
-    }
+    width: 36px;
+    height: 36px;
 }
 
 .skillsCircleWrapper:after {
@@ -558,8 +532,8 @@ hr {
     position: absolute;
     display: inline-block;
     @extend %vhCircleAfter;
-    border: 7px solid rgba(56, 87, 116, 0.541);
-    border-right:7px solid transparent;
+    border: 5px solid rgba(56, 87, 116, 0.541);
+    border-right:5px solid transparent;
     border-radius: 50%;
 
 @media (min-height: 740px) and (max-height: 767px) {
@@ -574,8 +548,8 @@ hr {
         position: absolute;
         display: inline-block;
         @extend %vhCircleAfter;
-        border: 7px solid rgba(56, 87, 116, 0.541);
-        border-bottom:7px solid transparent;
+        border: 5px solid rgba(56, 87, 116, 0.541);
+        border-bottom:5px solid transparent;
         border-radius: 50%;
     
     @media (min-height: 740px) and (max-height: 767px) {
@@ -590,9 +564,9 @@ hr {
         position: absolute;
         display: inline-block;
         @extend %vhCircleAfter;
-        border: 7px solid rgba(56, 87, 116, 0.541);
-        // border-right: 7px solid transparent;
-        border-bottom: 7px solid transparent;
+        border: 5px solid rgba(56, 87, 116, 0.541);
+        // border-right: 5px solid transparent;
+        border-bottom: 5px solid transparent;
         border-radius: 50%;
     
         @media (min-height: 740px) and (max-height: 767px) {
@@ -609,8 +583,8 @@ hr {
         position: absolute;
         display: inline-block;
         @extend %vhCircleAfter;
-        border: 7px solid rgba(56, 87, 116, 0.541);
-        border-left: 7px solid transparent;
+        border: 5px solid rgba(56, 87, 116, 0.541);
+        border-left: 5px solid transparent;
         border-radius: 50%;
 
         @media (min-height: 740px) and (max-height: 767px) {
@@ -627,8 +601,8 @@ hr {
         position: absolute;
         display: inline-block;
         @extend %vhCircleAfter;
-        border: 7px solid rgba(56, 87, 116, 0.541);
-        border-top: 7px solid transparent;
+        border: 5px solid rgba(56, 87, 116, 0.541);
+        border-top: 5px solid transparent;
         border-radius: 50%;
 
         @media (min-height: 740px) and (max-height: 767px) {
@@ -645,10 +619,10 @@ hr {
         position: absolute;
         display: inline-block;
         @extend %vhCircleAfter;
-        border: 7px solid rgba(56, 87, 116, 0.541);
-        // border-right: 7px solid transparent;
-        // border-left: 7px solid transparent;
-        border-bottom: 7px solid transparent;
+        border: 5px solid rgba(56, 87, 116, 0.541);
+        // border-right: 5px solid transparent;
+        // border-left: 5px solid transparent;
+        border-bottom: 5px solid transparent;
         border-radius: 50%;
 
         @media (min-height: 740px) and (max-height: 767px) {
@@ -666,10 +640,10 @@ hr {
         position: absolute;
         display: inline-block;
         @extend %vhCircleAfter;
-        border: 7px solid rgba(56, 87, 116, 0.541);
-        border-right: 7px solid transparent;
-        // border-left: 7px solid transparent;
-        border-bottom: 7px solid transparent;
+        border: 5px solid rgba(56, 87, 116, 0.541);
+        border-right: 5px solid transparent;
+        // border-left: 5px solid transparent;
+        border-bottom: 5px solid transparent;
         border-radius: 50%;
 
         @media (min-height: 740px) and (max-height: 767px) {
@@ -683,8 +657,8 @@ hr {
 }
 
 .skillsImg {
-    min-height: 30px;
-    min-width: 30px;
+    min-height: 20px;
+    min-width: 20px;
     background-repeat: no-repeat;
     background-position: center;
     background-size: contain;
@@ -736,38 +710,34 @@ hr {
 
 .img9 {
     background-image: url(/img/typeScript.png);
-    width: 30px;
-    height: 30px;
 }
 
 .img10 {
     background-image: url(/img/node.png);
-    width: 30px;
-    height: 30px;
 }
 
 .img11 {
     background-image: url(/img/postgresql.png);
-    width: 30px;
-    height: 30px;
 }
 
 .img12 {
     background-image: url(/img/mongo.png);
-    width: 30px;
-    height: 30px;
+}
+
+.img13 {
+    background-image: url(/img/react_native.png);
 }
 
 .portfolioLink {
-    margin-top: 1rem;
+    margin-top: 0.5rem;
     a {
     text-decoration: none;
-    font-size: 1rem;
+    font-size: 0.8rem;
     font-weight: 700;
     color: rgba(37, 32, 95, 0.801);
 
     &:hover {
-        font-size: 1.1rem;
+        font-size: 0.9rem;
         color: rgba(152, 30, 189, 0.781);
         transition: 0.4s;
     }
