--- a/sass/style.css
+++ b/sass/style.css
@@ -495,7 +495,13 @@ hr {
 
 .heading h4 {
   padding-bottom: 0;
-  padding-top: 2%;
+}
+
+@media (min-height: 845px) and (max-height: 899px) {
+  .heading h4 {
+    padding-top: 2%;
+    padding-bottom: 2%;
+  }
 }
 
 @media (min-height: 845px) and (max-height: 899px) {
@@ -534,7 +540,7 @@ hr {
 .year h5 {
   font-size: 0.8rem;
   font-weight: 700;
-  height: 3rem;
+  height: 2.45rem;
 }
 
 @media (min-height: 900px) and (max-height: 955px) {
@@ -596,7 +602,7 @@ hr {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  height: 3rem;
+  height: 2.45rem;
   -webkit-box-pack: end;
       -ms-flex-pack: end;
           justify-content: flex-end;
@@ -620,7 +626,7 @@ hr {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  height: 1.2rem;
+  height: 1rem;
   width: 2px;
   border-color: black;
 }
@@ -634,8 +640,8 @@ hr {
 .circle {
   background-color: rgba(255, 255, 255, 0);
   border: 2px solid #222;
-  height: 0.4rem;
-  width: 0.4rem;
+  height: 0.2rem;
+  width: 0.2rem;
   border-radius: 50%;
 }
 
@@ -652,7 +658,7 @@ hr {
   display: flex;
   font-size: 0.7rem;
   text-align: justify;
-  height: 3rem;
+  height: 2.45rem;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -674,7 +680,7 @@ hr {
           align-items: center;
   font-size: 0.7rem;
   text-align: justify;
-  height: 3rem;
+  height: 2.45rem;
 }
 
 @media (min-height: 740px) and (max-height: 767px) {
@@ -708,7 +714,7 @@ hr {
 }
 
 .marginTop {
-  margin-top: 1.5rem;
+  margin-top: 1rem;
 }
 
 @media (min-height: 740px) and (max-height: 767px) {
@@ -725,20 +731,20 @@ hr {
 }
 
 .skillsWrapper p {
-  font-size: 0.8rem;
+  font-size: 0.6rem;
   margin-top: 0.2rem;
 }
 
 @media (min-height: 768px) and (max-height: 844px) {
   .skillsWrapper p {
-    font-size: 0.7rem;
+    font-size: 0.5rem;
     margin-top: 0.2rem;
   }
 }
 
 @media (min-height: 740px) and (max-height: 767px) {
   .skillsWrapper p {
-    font-size: 0.6rem;
+    font-size: 0.4rem;
     margin-top: 0.15rem;
   }
 }
@@ -750,64 +756,22 @@ hr {
           flex-direction: column;
   background-color: rgba(255, 255, 255, 0);
   border: 2px solid #222;
-  height: 80px;
-  width: 80px;
+  height: 50px;
+  width: 50px;
   border-radius: 50%;
 }
 
-@media (min-height: 845px) and (max-height: 955px) {
-  .skillsCircleWrapper {
-    height: 70px;
-    width: 70px;
-  }
-}
-
-@media (min-height: 768px) and (max-height: 844px) {
-  .skillsCircleWrapper {
-    height: 60px;
-    width: 60px;
-  }
-}
-
-@media (min-height: 740px) and (max-height: 767px) {
-  .skillsCircleWrapper {
-    height: 50px;
-    width: 50px;
-  }
-}
-
 .skillsCircleWrapper:after, .circleCSS .skillsCircleWrapper:after, .gitCircleStak .skillsCircleWrapper:after, .jsCircleStak .skillsCircleWrapper:after, .circleTypeScript .skillsCircleWrapper:after, .reactCircleStak .skillsCircleWrapper:after, .circleMongoDB .skillsCircleWrapper:after {
-  width: 65px;
-  height: 65px;
-}
-
-@media (min-height: 845px) and (max-height: 955px) {
-  .skillsCircleWrapper:after, .circleCSS .skillsCircleWrapper:after, .gitCircleStak .skillsCircleWrapper:after, .jsCircleStak .skillsCircleWrapper:after, .circleTypeScript .skillsCircleWrapper:after, .reactCircleStak .skillsCircleWrapper:after, .circleMongoDB .skillsCircleWrapper:after {
-    width: 55px;
-    height: 55px;
-  }
-}
-
-@media (min-height: 768px) and (max-height: 844px) {
-  .skillsCircleWrapper:after, .circleCSS .skillsCircleWrapper:after, .gitCircleStak .skillsCircleWrapper:after, .jsCircleStak .skillsCircleWrapper:after, .circleTypeScript .skillsCircleWrapper:after, .reactCircleStak .skillsCircleWrapper:after, .circleMongoDB .skillsCircleWrapper:after {
-    width: 45px;
-    height: 45px;
-  }
-}
-
-@media (min-height: 740px) and (max-height: 767px) {
-  .skillsCircleWrapper:after, .circleCSS .skillsCircleWrapper:after, .gitCircleStak .skillsCircleWrapper:after, .jsCircleStak .skillsCircleWrapper:after, .circleTypeScript .skillsCircleWrapper:after, .reactCircleStak .skillsCircleWrapper:after, .circleMongoDB .skillsCircleWrapper:after {
-    width: 36px;
-    height: 36px;
-  }
+  width: 36px;
+  height: 36px;
 }
 
 .skillsCircleWrapper:after {
   content: '';
   position: absolute;
   display: inline-block;
-  border: 7px solid rgba(56, 87, 116, 0.541);
-  border-right: 7px solid transparent;
+  border: 5px solid rgba(56, 87, 116, 0.541);
+  border-right: 5px solid transparent;
   border-radius: 50%;
 }
 
@@ -822,8 +786,8 @@ hr {
   content: '';
   position: absolute;
   display: inline-block;
-  border: 7px solid rgba(56, 87, 116, 0.541);
-  border-bottom: 7px solid transparent;
+  border: 5px solid rgba(56, 87, 116, 0.541);
+  border-bottom: 5px solid transparent;
   border-radius: 50%;
 }
 
@@ -838,8 +802,8 @@ hr {
   content: '';
   position: absolute;
   display: inline-block;
-  border: 7px solid rgba(56, 87, 116, 0.541);
-  border-bottom: 7px solid transparent;
+  border: 5px solid rgba(56, 87, 116, 0.541);
+  border-bottom: 5px solid transparent;
   border-radius: 50%;
 }
 
@@ -855,8 +819,8 @@ hr {
   content: '';
   position: absolute;
   display: inline-block;
-  border: 7px solid rgba(56, 87, 116, 0.541);
-  border-left: 7px solid transparent;
+  border: 5px solid rgba(56, 87, 116, 0.541);
+  border-left: 5px solid transparent;
   border-radius: 50%;
 }
 
@@ -872,8 +836,8 @@ hr {
   content: '';
   position: absolute;
   display: inline-block;
-  border: 7px solid rgba(56, 87, 116, 0.541);
-  border-top: 7px solid transparent;
+  border: 5px solid rgba(56, 87, 116, 0.541);
+  border-top: 5px solid transparent;
   border-radius: 50%;
 }
 
@@ -889,8 +853,8 @@ hr {
   content: '';
   position: absolute;
   display: inline-block;
-  border: 7px solid rgba(56, 87, 116, 0.541);
-  border-bottom: 7px solid transparent;
+  border: 5px solid rgba(56, 87, 116, 0.541);
+  border-bottom: 5px solid transparent;
   border-radius: 50%;
 }
 
@@ -907,9 +871,9 @@ hr {
   content: '';
   position: absolute;
   display: inline-block;
-  border: 7px solid rgba(56, 87, 116, 0.541);
-  border-right: 7px solid transparent;
-  border-bottom: 7px solid transparent;
+  border: 5px solid rgba(56, 87, 116, 0.541);
+  border-right: 5px solid transparent;
+  border-bottom: 5px solid transparent;
   border-radius: 50%;
 }
 
@@ -923,8 +887,8 @@ hr {
 }
 
 .skillsImg {
-  min-height: 30px;
-  min-width: 30px;
+  min-height: 20px;
+  min-width: 20px;
   background-repeat: no-repeat;
   background-position: center;
   background-size: contain;
@@ -982,41 +946,37 @@ hr {
 
 .img9 {
   background-image: url(/img/typeScript.png);
-  width: 30px;
-  height: 30px;
 }
 
 .img10 {
   background-image: url(/img/node.png);
-  width: 30px;
-  height: 30px;
 }
 
 .img11 {
   background-image: url(/img/postgresql.png);
-  width: 30px;
-  height: 30px;
 }
 
 .img12 {
   background-image: url(/img/mongo.png);
-  width: 30px;
-  height: 30px;
+}
+
+.img13 {
+  background-image: url(/img/react_native.png);
 }
 
 .portfolioLink {
-  margin-top: 1rem;
+  margin-top: 0.5rem;
 }
 
 .portfolioLink a {
   text-decoration: none;
-  font-size: 1rem;
+  font-size: 0.8rem;
   font-weight: 700;
   color: rgba(37, 32, 95, 0.801);
 }
 
 .portfolioLink a:hover {
-  font-size: 1.1rem;
+  font-size: 0.9rem;
   color: rgba(152, 30, 189, 0.781);
   -webkit-transition: 0.4s;
   transition: 0.4s;
